# ansible

./: .gitignore  Cargo.toml  ansible.conf  build.rs  example.conf  example.json  example_server.json
src/: client.rs  config.rs  lib.rs  main.rs  payload.rs  serde_types.in.rs  tokens.rs  update.rs
