[package]
name = "ansible"
version = "0.1.0"
authors = ["Nathan Perry <avaglir@gmail.com>"]

[[bin]]
name = "pull"
path = "src/bin/pull/main.rs"

[[bin]]
name = "push"
path = "src/bin/push/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[dependencies]
rocket = "0.2.0"
rocket_codegen = "0.2.0"
rustc-serialize = "0.3.21"
time = "*"

serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
