[package]
name = "ansible"
version = "0.1.0"
authors = ["Nathan Perry <avaglir@gmail.com>"]
build = "build.rs"

[[bin]]
name = "pull"
path = "src/bin/pull/main.rs"

[[bin]]
name = "push"
path = "src/bin/push/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[build-dependencies]
serde_codegen = "0.8"

[dependencies]
iron = "0.5.1"
router = "0.5.1"
persistent = "0.3.0"
config = "~0.1.0"
hyper = "0.10.4"
plugin = "0.2.6"
serde = "0.8"
serde_json = "0.8.3"
rustc-serialize = "0.3.21"
time = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
