[package]
name = "ansible"
version = "0.1.0"
authors = ["Nathan Perry <avaglir@gmail.com>"]

[[bin]]
name = "pull"
path = "src/bin/pull/main.rs"

[[bin]]
name = "push"
path = "src/bin/push/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[dependencies]
iron = "0.5.1"
router = "0.5.1"
persistent = "0.3.0"
plugin = "0.2.6"
hyper = "0.10.4"
hyper-native-tls = "0.2.2"

serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

rpassword = "0.3.1"
rustc-serialize = "0.3.21"
time = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
